--- a/html/index.html
+++ b/html/index.html
@@ -28,8 +28,8 @@
                     <div class="collapse navbar-collapse" id="myNav">
                         <ul class="nav navbar-nav">
                             <li><a href="#submission">Data Form</a></li>
-                            <li><a href="#tweet">Tweet Results</a></li>
-
+                            <li><a href="#tweets">Tweet Results</a></li>
+                            <li><a href="compareTwo.html">Compare Two</a></li>
                         </ul>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
             </form>
 
             <hr>
-            <div class="row" id="Sentiment-Analysis" style="width: 100%; height: 500px;">
+            <div class="row" id="Sentiment-Analysis" style="width: 100%; height: 500px">
                 <div id="left-graph" class="col-lg-6" style="width: 50%; height: 500px" >
 
                 </div>
@@ -92,7 +92,7 @@
             <hr>
             <h1 style="text-align: center">Tweet Results</h1>
             <div style="width: 100%;height: 100%; padding: 5%" id="tweets">
-                
+
             </div>
 
         </div>
