--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,7 @@
                             <li><a href="#submission">Data Form</a></li>
                             <li><a href="#tweets">Tweet Results</a></li>
                             <li><a href="compareTwo.html">Compare Two</a></li>
+                            <li><a href="dynamics.html">Dynamics</a></li>
                         </ul>
                     </div>
                 </div>
